--- a/cashew.html
+++ b/cashew.html
@@ -78,10 +78,12 @@
                     <img src="img/ceramic 3.jpg" alt="wodden" id="wooden3" />
                 </div>
                 <div class="col-lg-6">
-                    <p data-aos="fade-left" data-aos-delay="300">In our everyday life, we are surrounded by ceramics and glass. Ceramics and glass are beneficial in the kitchen for cooking, storing, and serving food. The finest tableware and cookware are made from porcelain. Wine Glasses, pitchers,
-                        and jars are obtained from blown glass. Kitchenware based on Pyrex glass is oven proof and used to cook premium baked goods. Ceramic coatings cover the oven’s internal surface and make it scratch-free, easy-to-clean, and well insulated
-                        to ensure uniform temperature. Even many washing machines and dryers are coated with a porcelain enamel that is ant scratch, stain resistant and resistant to chemicals. Ceramic has been in use for over millions of years and is
-                        found healthy l and safe for food. It has been observed that ingredients that form ceramic are considered non-toxic.
+                    <p data-aos="fade-left" data-aos-delay="300">The cashew (Anacardium occidentale), a native of Brazil, was brought into India in the late sixteenth century for afforestation and soil conservation. From its humble beginnings as a crop designed to prevent soil erosion, cashew has
+                        grown to become a major foreign exchange earner, next only to coffee and tea. Cashew Kernels are a versatile, convenient, tasty, and highly nutritious addition to the average diet. When consumed in measured amounts it can help
+                        in improving heart health. Cashew nuts are a blessing for people with Vegan Lifestyles. G PRASAD IMPORT AND EXPORT PVT LTD is the cashew exporter that delivers high quality cashew exports from India. We are one of the fresh cashew
+                        nut exporters in India. Our Specialization in cashew kernels is W 180 Cashew. W 180 Cashew is an exquisite assortment with a creamy texture and luscious look. Its rich nutrients and luxurious crunch add to the velvety texture.
+                        This is completely packed with nutritional values and hence is acknowledged as “The King of Cashews”. We Export Other Varities like W 240, W 320, W 400, Mix white, Large White Pieces (LWP), Small White Pieces (SWP), Small scorched
+                        pieces (SSP).
                     </p>
                 </div>
             </div>
