--- a/cashew.html
+++ b/cashew.html
@@ -95,7 +95,7 @@
                     <div class="card" style="width: 18rem;" data-aos="fade-up" data-aos-delay="300">
                         <img src="img/ceramic 1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Ceramic Dinner sets </p>
+                            <p class="card-text">W 240</p>
                         </div>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                     <div class="card" style="width: 18rem;" data-aos="fade-up" data-aos-delay="300">
                         <img src="img/ceramic 2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Art Clay Pots </p>
+                            <p class="card-text">W 320 </p>
                         </div>
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                     <div class="card" style="width: 18rem;" data-aos="fade-up" data-aos-delay="300">
                         <img src="img/ceramic 3.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Art Clay Pots</p>
+                            <p class="card-text">W 180</p>
                         </div>
                     </div>
                 </div>
