--- a/copper.html
+++ b/copper.html
@@ -67,7 +67,7 @@
     <!-- COMPANY -->
     <div class="company-head">
         <div class="container">
-            <h1 data-aos="fade-up" data-aos-delay="300">Copper Products</h1>
+            <h1 data-aos="fade-up" data-aos-delay="300">Copper/Brass Products</h1>
         </div>
     </div>
 
@@ -93,7 +93,7 @@
                     <div class="card" style="width: 18rem;" data-aos="fade-up" data-aos-delay="300">
                         <img src="img/copper 2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Copper Bottles</p>
+                            <p class="card-text">Copper/Brass Bottles</p>
                         </div>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                     <div class="card" style="width: 18rem;" data-aos="fade-up" data-aos-delay="300">
                         <img src="img/copper 6.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Copper God Statue</p>
+                            <p class="card-text">Copper/Brass God Statue</p>
                         </div>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                     <div class="card" style="width: 18rem;" data-aos="fade-up" data-aos-delay="300">
                         <img src="img/copper 4.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Copper Diya and Samai</p>
+                            <p class="card-text">Copper/Brass Diya and Samai</p>
                         </div>
                     </div>
                 </div>
